--- a/css/styles.css
+++ b/css/styles.css
@@ -49,9 +49,10 @@ overflow: hidden;
 
 .container {
 max-width: 318px;
-margin: 0 auto;
 padding-left: 15px;
 padding-right: 15px;
+margin-left: auto;
+margin-right: auto;
 }
 
 /* ============== MOBILE HEADER STYLES ============== */
@@ -67,7 +68,7 @@ display: none;
 .page-header-container {
 display: flex;
 align-items: center;
-justify-content: space-between;
+
 }
 
 .logo {
@@ -78,7 +79,8 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
-margin-right: 149px;
+margin-right: auto;
+
 }
 
 .accent-studio-header {
@@ -86,6 +88,7 @@ color: #2E2F42;
 }
 
 @media screen and (max-width: 767px) {
+
 .top-header {
 padding-top: 16px;
 padding-bottom: 16px;
@@ -97,6 +100,7 @@ background-color: transparent;
 fill: #2F2F37;
 line-height: 0;
 padding: 0;
+margin-left: auto;
 }
 
 .mobile-menu-wrapper {
@@ -114,6 +118,7 @@ transition: transform 250ms linear;
 
 .mobile-menu-wrapper.is-open {
 transform: translateX(0%);
+}
 
 .mobile-menu-container {
 position: relative;
@@ -181,20 +186,19 @@ gap: 40px;
 }
 
 .mobile-social-media-list .mobile-social-media-list-link {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    background-color: #4D5AE5;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+border-radius: 50%;
+width: 40px;
+height: 40px;
+background-color: #4D5AE5;
 }
 
 .icons-social-media {
 fill: #F4F4FD;
 }
-
 }
 
 /* ============== TABLET HEADER STYLES ============== */
@@ -211,6 +215,71 @@ display: none;
 .mobile-menu-wrapper {
 display: none;
 }
+}
+
+.menu {
+margin-right: auto;
+align-items: center;
+display: flex;
+}
+
+.nav-link.current::after {
+content: "";
+position: absolute;
+left: 0;
+bottom: -1px;
+display: block;
+width: 100%;
+height: 4px;
+border-radius: 2px;
+background-color: #404BBF;
+}
+
+.nav-list {
+display: flex;
+gap: 40px;
+}
+
+.nav-link {
+    color: #2E2F42;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: block;
+}
+
+.current {
+position: relative;
+color: #404BBF;
+}
+
+.nav-link:active {
+    color: #404BBF;
+}
+
+.info {
+    font-style: normal;
+}
+
+.info-list {
+    display: flex;
+    gap: 40px;
+}
+
+.info-link {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #434455;
+    letter-spacing: 0.02em;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 1158px) {
