--- a/css/styles.css
+++ b/css/styles.css
@@ -27,25 +27,6 @@ button {
 cursor: pointer;
 }
 
-.visually-hidden {
-color: #2E2F42;
-text-align: center;
-font-size: 20px;
-font-weight: 500;
-line-height: 1.2;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-position: absolute;
-width: 1px;
-height: 1px;
-margin: -1px;
-border: 0;
-padding: 0;
-white-space: nowrap;
-clip-path: inset(100%);
-clip: rect(0 0 0 0);
-overflow: hidden;
-}
 
 .container {
 max-width: 318px;
@@ -68,10 +49,11 @@ display: none;
 .page-header-container {
 display: flex;
 align-items: center;
-
 }
 
 .logo {
+display: flex;
+align-items: center;
 font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
@@ -80,19 +62,145 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
 margin-right: auto;
+}
 
+.accent-color {
+color: #404BBF;
 }
 
 .accent-studio-header {
 color: #2E2F42;
 }
 
-@media screen and (max-width: 767px) {
+/* ============== MOBILE SECTION 1 ============== */
 
+.section-one {
+background-color: #2E2F42;
+background-position: center;
+width: 288px;
+height: 432px;
+width: 100%;
+background-image: linear-gradient(to bottom,
+rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)), url(../images/mobile/hero-mobile.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+margin: 0 auto;
+padding: 72px 0;
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 280px),
+screen and (min-resolution: 2dppx) and (min-width: 280px),
+screen and (min-device-pixel-ratio: 2) and (min-width: 280px) {
+.section-one {
+background-image: linear-gradient(to bottom,
+rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)), url(../images/mobile/hero-mobile@2x.jpg);
+}
+}
+
+.title {
+color: #FFF;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+text-align: center;
+max-width: 169px;
+margin-bottom: 72px;
+margin-left: auto;
+margin-right: auto;
+}
+
+.btn {
+color: #FFF;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+background: #4D5AE5;
+min-width: 169px;
+height: 56px;
+border: none;
+border-radius: 4px;
+margin-left: auto;
+margin-right: auto;
+display: block;
+transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+margin-bottom: 72px;
+}
+
+/* ===== MOBILE section 2 ===== */
+
+.visually-hidden {
+color: #2E2F42;
+text-align: center;
+font-size: 20px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+position: absolute;
+width: 1px;
+height: 1px;
+margin: -1px;
+border: 0;
+padding: 0;
+white-space: nowrap;
+clip-path: inset(100%);
+clip: rect(0 0 0 0);
+overflow: hidden;
+}
+
+.section-two {
+padding: 96px 0;
+}
+
+.list-section-two {
+display: flex;
+flex-direction: column;
+gap: 72px;
+}
+
+.icons-block {
+display: none;
+}
+
+.block-title {
+text-align: center;
+color: #2E2F42;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+margin-bottom: 8px;
+}
+
+.text {
+color: #434455;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+}
+
+
+
+
+@media screen and (max-width: 767px) {
+/* ===== MOBILE HEADER ===== */
 .top-header {
 padding-top: 16px;
 padding-bottom: 16px;
+border-bottom: 1px solid #E7E9FC;
+background-color: #FFF;
+box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
+
+/* ===== MOBILE MENU ===== */
 
 .mobile-menu-open-btn {
 border: none;
@@ -123,6 +231,7 @@ transform: translateX(0%);
 .mobile-menu-container {
 position: relative;
 padding-top: 72px;
+padding-bottom: 40px;
 }
 
 .mobile-menu-close-btn {
@@ -138,7 +247,7 @@ height: 24px;
 border-radius: 50%;
 border: 1px solid rgba(0, 0, 0, 0.10);
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-padding: 0;
+padding-right: 15;
 }
 
 .mobile-menu {
@@ -169,13 +278,10 @@ margin-bottom: 48px;
 .mobile-info-link {
 color:  #434455;
 font-size: 20px;
+font-style: normal;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
-}
-
-.accent-color {
-color: #404BBF;
 }
 
 .mobile-social-media-list {
@@ -201,9 +307,8 @@ fill: #F4F4FD;
 }
 }
 
-/* ============== TABLET HEADER STYLES ============== */
-
 @media screen and (min-width: 768px) {
+/* ======= TABLET HEADER STYLES ======== */
 .container {
 max-width: 766px;
 }
@@ -215,12 +320,15 @@ display: none;
 .mobile-menu-wrapper {
 display: none;
 }
+
+.logo {
+margin-right: 120px;
 }
 
 .menu {
-margin-right: auto;
-align-items: center;
+width: 261px;
 display: flex;
+margin-right: auto;
 }
 
 .nav-link.current::after {
@@ -241,17 +349,17 @@ gap: 40px;
 }
 
 .nav-link {
-    color: #2E2F42;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    padding-top: 24px;
-    padding-bottom: 24px;
-    display: block;
+color: #2E2F42;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+transition-property: color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+padding-top: 24px;
+padding-bottom: 24px;
+display: block;
 }
 
 .current {
@@ -259,31 +367,147 @@ position: relative;
 color: #404BBF;
 }
 
-.nav-link:active {
-    color: #404BBF;
-}
-
-.info {
-    font-style: normal;
+.nav-list .nav-link:hover,
+.nav-list .nav-link:focus {
+color: #404BBF;
 }
 
 .info-list {
-    display: flex;
-    gap: 40px;
+display: flex;
+flex-direction: column;
+gap: 12px;
 }
 
 .info-link {
-    font-size: 16px;
-    line-height: 1.5;
-    color: #434455;
-    letter-spacing: 0.02em;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+font-style: normal;
+font-size: 12px;
+line-height: 1.17;
+color: #434455;
+letter-spacing: 0.04em;
+transition-property: color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.info-list .info-link:hover,
+.info-list .info-link:focus {
+color: #404BBF;
+}
+
+/* ===== TABLET section 1 ===== */
+
+.section-one {
+background-image: linear-gradient(to bottom,
+rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)), url(../images/tablet/hero-tablet.jpg);
+padding: 112px 0;
+}
+
+.title {
+font-size: 56px;
+line-height: 1.07;
+max-width: 496px;
+margin-bottom: 36px;
+}
+
+button:hover,
+button:focus {
+background-color: #404BBF;
+}
+
+/* ===== TABLET SECTION 2 */
+.list-section-two {
+flex-direction: row;
+flex-wrap: wrap;
+gap: 72px 24px;
+}
+
+.list-item-section-two {
+width: calc((100% - 24px) / 2);
+}
+
+.block-title {
+text-align: start;
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 768px),
+screen and (min-resolution: 2dppx) and (min-width: 768px),
+screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
+.section-one {
+background-image: linear-gradient(to bottom,
+rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)), url(../images/tablet/hero-tablet@2x.jpg);
+}
+}
+
+
 
 @media screen and (min-width: 1158px) {
 .container {
 max-width: 1158px;
+}
+
+.logo {
+margin-right: 76px;
+}
+
+.info-list {
+flex-direction: row;
+gap: 40px;
+}
+
+/* ===== DESKTOP section 1 ===== */
+
+.section-one {
+background-image: linear-gradient(to bottom,
+rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)), url(../images/desktop/hero-desktop.jpg);
+}
+
+.title {
+margin-bottom: 48px;
+}
+
+/* ===== DESKTOP section 2 ===== */
+.icons-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
+.icons {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 24px 100px;
+    border-radius: 4px;
+    border: 1px solid #8E8F99;
+}
+
+.block-title {
+font-size: 20px;
+font-weight: 500;
+}
+
+.text {
+font-weight: 400;
+}
+
+.list-item-section-two {
+width: calc((100% - 72px) / 4);
+
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 1158px),
+screen and (min-resolution: 2dppx) and (min-width: 1158px),
+screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
+.section-one {
+background-image: linear-gradient(to bottom,
+rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)), url(../images/desktop/hero-desktop@2x.jpg);
 }
 }
