--- a/css/styles.css
+++ b/css/styles.css
@@ -27,11 +27,10 @@ button {
 cursor: pointer;
 }
 
-
 .container {
-max-width: 318px;
-padding-left: 15px;
-padding-right: 15px;
+max-width: 320px;
+padding-left: 16px;
+padding-right: 16px;
 margin-left: auto;
 margin-right: auto;
 }
@@ -187,6 +186,481 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 }
 
+/* ===== MOBILE section 3 ===== */
+
+.section-three {
+background-color: #F4F4FD;
+padding: 96px 0;
+}
+
+.section-three-title {
+color: #2E2F42;
+text-align: center;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+margin-bottom: 72px;
+}
+
+.card-section-three {
+object-fit: cover;
+}
+
+.list-section-three {
+padding-left: 0;
+margin-top: 0;
+margin-bottom: 0;
+display: flex;
+flex-direction: column;
+gap: 72px;
+justify-content: center;
+}
+
+.list-item-section-three {
+background-color: #FFFFFF;
+border-radius: 0px 0px 4px 4px;
+box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.social-media-list .link {
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+border-radius: 50%;
+width: 40px;
+height: 40px;
+background-color: #4D5AE5;
+transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icons-social-media {
+fill: #F4F4FD;
+}
+
+.social-media-list {
+display: flex;
+gap: 24px;
+justify-content: center;
+align-items: center;
+}
+
+.team {
+padding: 32px 0;
+}
+
+.team-title {
+color: #2E2F42;
+text-align: center;
+font-size: 20px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+margin-bottom: 8px;
+}
+
+.team-text {
+color: #434455;
+text-align: center;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
+margin-bottom: 8px;
+}
+
+/* =====MOBILE SECTION 4 ===== */
+
+.section-four {
+background-color: #FFF;
+padding: 96px 0;
+}
+
+.section-four-title {
+color: #2E2F42;
+text-align: center;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+margin-bottom: 72px;
+}
+
+.list-section-four {
+display: flex;
+flex-wrap: wrap;
+row-gap: 48px;
+flex-direction: column;
+}
+
+.portfolio {
+padding: 32px 16px;
+border-top: none;
+box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.card-section-four {
+object-fit: cover;
+}
+
+.portfolio-title {
+color: #2E2F42;
+font-size: 20px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+margin-bottom: 8px;
+}
+
+.portfolio-text {
+color: #434455;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+}
+
+/* ======= MOBILE FOOTER ======= */
+
+.footer {
+background-color: #2E2F42;
+padding: 96px 0;
+}
+
+.accent-studio-footer {
+color: #F4F4FD;
+font-size: 18px;
+line-height: 1.166;
+letter-spacing: 0.03em;
+}
+
+footer .logo {
+display: inline-block;
+margin-bottom: 16px;
+}
+
+.logo-plus-text {
+text-align: center;
+margin-right: 0;
+}
+
+.text-footer {
+color: #F4F4FD;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+font-weight: 400;
+text-align: start;
+margin-bottom: 72px;
+}
+
+.icons-footer-text {
+color: #FFF;
+text-align: center;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+margin-bottom: 16px;
+}
+
+.social-media-list-footer {
+display: flex;
+justify-content: center;
+gap: 16px;
+margin-bottom: 72px;
+}
+
+.social-media-item {
+width: 40px;
+height: 40px;
+}
+
+.link-footer {
+width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe-form {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+gap: 16px;
+}
+
+.subscribe-user-email {
+width: 288px;
+height: 40px;
+border-radius: 4px;
+border: 1px solid #FFF;
+background-color: transparent;
+color: #FFF;
+font-size: 12px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.04em;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+padding: 8px 16px;
+}
+
+.subscribe-user-email::placeholder {
+color: #fff;
+}
+
+.subscribe-btn {
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+background: #4D5AE5;
+color: #FFF;
+min-width: 165px;
+border: none;
+border-radius: 4px;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+transition-property: background-color, box-shadow;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 8px 24px;
+margin-left: auto;
+margin-right: auto;
+}
+
+.subscribe-btn-icon {
+fill: #FFFFFF;
+margin-left: 16px;
+}
+
+/* ===== M O D A L   F O R M  MOBILE ===== */
+/* ============== MOBILE BACKDROP STYLES ============== */
+
+.backdrop {
+position: fixed;
+top: 0;
+left: 0;
+z-index: 9999;
+width: 100%;
+height: 100%;
+background-color: rgba(46, 47, 66, 0.4);
+opacity: 0;
+visibility: hidden;
+pointer-events: none;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+opacity: 1;
+visibility: visible;
+pointer-events: auto;
+}
+
+/* ======== MOBILE MODAL WINDOW STYLES ========= */
+
+.modal {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 288px;
+min-height: 623px;
+background-color: #FCFCFC;
+border-radius: 4px;
+padding: 72px 24px 24px;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-close {
+display: flex;
+align-items: center;
+justify-content: center;
+position: absolute;
+top: 24px;
+right: 24px;
+background-color: #E7E9FC;
+width: 24px;
+height: 24px;
+border-radius: 50%;
+border: 1px solid rgba(0, 0, 0, 0.10);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding: 0;
+}
+
+.btn-close-icon {
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.group-title {
+width: 256px;
+color: #2E2F42;
+font-size: 16px;
+text-align: center;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+margin-bottom: 16px;
+}
+
+.review-form-field-label {
+display: block;
+color: #8E8F99;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+margin-bottom: 4px;
+}
+
+.review-form-field-comment {
+margin-bottom: 16px;
+}
+
+.review-form-field-wrapper {
+margin-bottom: 8px;
+}
+
+.review-form-input-wrapper {
+position: relative;
+}
+
+.review-form-input {
+font-size: 14px;
+width: 100%;
+height: 40px;
+border-radius: 4px;
+border: 1px solid rgba(46, 47, 66, 0.40);
+background-color: transparent;
+padding-left: 34px;
+outline: 0px solid transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-input:focus {
+border-color: #4D5AE5;
+}
+
+.review-form-input-icon {
+position: absolute;
+top: 50%;
+left: 16px;
+transform: translateY(-50%);
+fill: #2E2F42;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-input:focus+.review-form-input-icon {
+fill: #4D5AE5;
+}
+
+.review-form-comment {
+display: block;
+width: 100%;
+height: 120px;
+color: rgba(46, 47, 66, 0.40);
+resize: none;
+font-size: 12px;
+font-weight: 400;
+line-height: 1.17;
+letter-spacing: 0.04em;
+border-radius: 4px;
+border: 1px solid rgba(46, 47, 66, 0.40);
+background-color: transparent;
+outline: 0px solid transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding: 8px 16px;
+}
+
+.review-form-comment::placeholder {
+color: rgba(46, 47, 66, 0.40);
+}
+
+.review-form-comment:focus {
+border-color: #4D5AE5;
+}
+
+.review-form-own-checkbox {
+display: inline-flex;
+align-items: center;
+justify-content: center;
+width: 16px;
+height: 16px;
+border: 1px solid rgba(46, 47, 66, 0.40);
+border-radius: 2px;
+cursor: pointer;
+fill: transparent;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+margin-right: 8px;
+}
+
+.review-form-checkbox:checked+.review-form-checkbox-label>.review-form-own-checkbox {
+background-color: #404BBF;
+border-color: #404BBF;
+fill: #F4F4FD;
+border: none;
+}
+
+.review-form-own-checkbox-icon {
+fill: #F4F4FD;
+opacity: 1;
+}
+
+.review-form-checkbox:checked+.review-form-checkbox-label .review-form-own-checkbox {
+opacity: 1;
+}
+
+.review-form-checkbox:focus+.review-form-checkbox-label .review-form-own-checkbox {
+outline: 1px solid #4D5AE5;
+}
+
+.review-form-checkbox-label {
+display: flex;
+align-items: center;
+color: #8E8F99;
+font-size: 12px;
+font-weight: 400;
+line-height: 1.17;
+letter-spacing: 0.04em;
+
+}
+
+.policy-link {
+text-decoration: underline;
+color: #4D5AE5;
+}
+
+.review-form-checkbox-wrapper {
+margin-bottom: 24px;
+}
+
+.review-form-submit-btn {
+display: block;
+color: #FFF;
+letter-spacing: 0.04em;
+background-color: #4D5AE5;
+min-width: 169px;
+height: 56px;
+font-weight: 500;
+line-height: 1.5;
+border: none;
+border-radius: 4px;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding: 16px 32px;
+margin-left: auto;
+margin-right: auto;
+}
 
 
 
@@ -199,6 +673,20 @@ border-bottom: 1px solid #E7E9FC;
 background-color: #FFF;
 box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
+
+
+/* ===== MOBILE SECTION 3 ===== */
+.container {
+width: 296px;
+}
+
+
+/* ===== MOBILE SECTION 4 ===== */
+
+.overlay {
+display: none;
+}
+
 
 /* ===== MOBILE MENU ===== */
 
@@ -430,6 +918,79 @@ width: calc((100% - 24px) / 2);
 text-align: start;
 }
 
+/* ===== TABLET SECTION 3 ===== */
+.list-section-three {
+flex-direction: row;
+flex-wrap: wrap;
+gap: 64px 24px;
+}
+
+.list-item-section-three {
+background-color: #FFFFFF;
+width: calc((100% - 24px) / 2);
+}
+
+.container-team {
+width: 584px;
+}
+
+.social-media-list .link:hover,
+.social-media-list .link:focus {
+background-color: #404BBF;
+}
+
+
+/* ====== TABLET SECTION 4 ======= */
+.overlay {
+display: none;
+}
+
+.list-section-four {
+flex-wrap: wrap;
+gap: 72px 24px;
+flex-direction: row;
+}
+
+.list-item-section-four {
+width: calc((100% - 24px) / 2);
+background: #FFF;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+/* ======== TABLET FOOTER ======= */
+.container-footer {
+align-items: baseline;
+width: 584px;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+gap: 72px 24px;
+}
+
+.logo-plus-text {
+width: 264px;
+text-align: start;
+}
+
+.icons-footer-text {
+text-align: start;
+}
+
+.footer-subscribe-form {
+gap: 24px;
+flex-direction: row;
+}
+
+.link-footer:hover,
+.link-footer:focus {
+background-color: #31d0aa;
+}
+
+
+
+}
+
 @media screen and (min-resolution: 192dpi) and (min-width: 768px),
 screen and (min-resolution: 2dppx) and (min-width: 768px),
 screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
@@ -440,7 +1001,7 @@ rgba(46, 47, 66, 0.7)), url(../images/tablet/hero-tablet@2x.jpg);
 }
 }
 
-
+/* ============ DESKTOP ============ */
 
 @media screen and (min-width: 1158px) {
 .container {
@@ -456,7 +1017,7 @@ flex-direction: row;
 gap: 40px;
 }
 
-/* ===== DESKTOP section 1 ===== */
+/* ===== DESKTOP SECTION 1 ===== */
 
 .section-one {
 background-image: linear-gradient(to bottom,
@@ -468,24 +1029,25 @@ rgba(46, 47, 66, 0.7)), url(../images/desktop/hero-desktop.jpg);
 margin-bottom: 48px;
 }
 
-/* ===== DESKTOP section 2 ===== */
+
+/* ===== DESKTOP SECTION 2 ===== */
 .icons-block {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 112px;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    margin-bottom: 8px;
+display: flex;
+align-items: center;
+justify-content: center;
+height: 112px;
+background-color: #f4f4fd;
+border-radius: 4px;
+margin-bottom: 8px;
 }
 
 .icons {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    padding: 24px 100px;
-    border-radius: 4px;
-    border: 1px solid #8E8F99;
+display: flex;
+width: 100%;
+height: 100%;
+padding: 24px 100px;
+border-radius: 4px;
+border: 1px solid #8E8F99;
 }
 
 .block-title {
@@ -499,8 +1061,104 @@ font-weight: 400;
 
 .list-item-section-two {
 width: calc((100% - 72px) / 4);
+}
+
+
+/* ===== DESKTOP SECTION 3 ===== */
+.container-team {
+width: 1158px;
+}
+
+.section-three {
+padding: 120px 0;
+}
+
+.list-section-three {
+flex-direction: row;
+gap: 24px;
+}
+
+.list-item-section-three {
+width: calc((100% - 72px) / 4);
+}
+
+
+/* ===== DESKTOP SECTION 4 ===== */
+.section-four {
+padding: 120px 0;
+}
+
+.list-section-four {
+display: flex;
+padding-left: 0;
+margin-top: 0;
+margin-bottom: 0;
+flex-wrap: wrap;
+padding-bottom: 0px;
+gap: 32px;
+flex-direction: row;
+align-items: flex-start;
+column-gap: 24px;
+row-gap: 48px;
+}
+
+.list-item-section-four {
+width: calc((100% - 48px) / 3);
+background: #FFF;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-section-four {
+object-fit: cover;
+max-width: 360px;
+}
+
+.overlay {
+display: flex;
+position: absolute;
+color: #F4F4FD;
+background-color: #4D5AE5;
+padding: 40px 32px;
+top: 0;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+width: 100%;
+height: 100%;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-item-section-four:hover .overlay {
+transform: translateY(0%);
+}
+
+.images-portfolio {
+position: relative;
+overflow: hidden;
+}
+
+.list-item-section-four:hover {
+box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+/* ===== DESKTOP FOOTER ===== */
+.footer {
+padding: 100px 0;
+}
+
+.container-footer {
+width: 1158px;
+align-items: baseline;
+padding: 0 15px;
+gap: 0;
+margin: 0 auto;
+justify-content: space-between;
+}
+
 
 }
+
 
 @media screen and (min-resolution: 192dpi) and (min-width: 1158px),
 screen and (min-resolution: 2dppx) and (min-width: 1158px),
