--- a/css/styles.css
+++ b/css/styles.css
@@ -504,7 +504,6 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .group-title {
-width: 256px;
 color: #2E2F42;
 font-size: 16px;
 text-align: center;
@@ -632,7 +631,6 @@ font-size: 12px;
 font-weight: 400;
 line-height: 1.17;
 letter-spacing: 0.04em;
-
 }
 
 .policy-link {
@@ -987,6 +985,12 @@ flex-direction: row;
 background-color: #31d0aa;
 }
 
+/* ======== TABLET MODAL WINDOW STYLE ======= */
+.modal {
+width: 408px;
+min-height: 584px;
+}
+
 
 
 }
@@ -1156,7 +1160,11 @@ margin: 0 auto;
 justify-content: space-between;
 }
 
+/* ===== DESKTOP MODAL WINDOW ====== */
 
+.review-form-input {
+padding-left: 38px;
+}
 }
 
 
