--- a/css/styles.css
+++ b/css/styles.css
@@ -63,9 +63,6 @@ color: #4d5ae5;
 margin-right: auto;
 }
 
-.accent-color {
-color: #404BBF;
-}
 
 .accent-studio-header {
 color: #2E2F42;
@@ -685,7 +682,6 @@ width: 296px;
 display: none;
 }
 
-
 /* ===== MOBILE MENU ===== */
 
 .mobile-menu-open-btn {
@@ -705,6 +701,7 @@ z-index: 99999999;
 width: 100%;
 height: 100%;
 background-color: #FFF;
+padding: 72px 24px 40px 16px;
 
 transform: translateX(100%);
 transition: transform 250ms linear;
@@ -714,11 +711,6 @@ transition: transform 250ms linear;
 transform: translateX(0%);
 }
 
-.mobile-menu-container {
-position: relative;
-padding-top: 72px;
-padding-bottom: 40px;
-}
 
 .mobile-menu-close-btn {
 display: flex;
@@ -733,7 +725,10 @@ height: 24px;
 border-radius: 50%;
 border: 1px solid rgba(0, 0, 0, 0.10);
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-padding-right: 15;
+}
+
+.mobile-menu-container {
+position: relative;
 }
 
 .mobile-menu {
@@ -750,14 +745,15 @@ line-height: 1.11;
 letter-spacing: 0.02em;  
 }
 
-.mobile-menu-navigation {
-margin-bottom: 168px;
+.mobile-menu-link-studio {
+color: #404BBF;
 }
 
 .mobile-info-list {
 display: flex;
 flex-direction: column;
 gap: 24px;
+margin-top: 168px;
 margin-bottom: 48px;
 }
 
@@ -768,6 +764,10 @@ font-style: normal;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
+}
+
+.mobile-info-link-number {
+color: #404BBF;
 }
 
 .mobile-social-media-list {
