--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,6 @@ color: #2E2F42;
 background-color: #2E2F42;
 background-position: center;
 width: 288px;
-height: 432px;
 width: 100%;
 background-image: linear-gradient(to bottom,
 rgba(46, 47, 66, 0.7),
@@ -695,6 +694,7 @@ margin-left: auto;
 }
 
 .mobile-menu-wrapper {
+display: flex;
 position: fixed;
 top: 0;
 left: 0;
@@ -702,7 +702,7 @@ z-index: 99999999;
 width: 100%;
 height: 100%;
 background-color: #FFF;
-padding: 72px 24px 40px 16px;
+
 
 transform: translateX(100%);
 transition: transform 250ms linear;
@@ -718,8 +718,8 @@ display: flex;
 align-items: center;
 justify-content: center;
 position: absolute;
-top: 24px;
-right: 24px;
+top: 16px;
+right: 16px;
 background-color: transparent;
 width: 24px;
 height: 24px;
@@ -729,7 +729,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 }
 
 .mobile-menu-container {
+display: flex;
+flex-direction: column;
 position: relative;
+padding: 72px 24px 40px 16px;
 }
 
 .mobile-menu {
