--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,6 @@ display: block;
 transition-property: background-color;
 transition-duration: 250ms;
 transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-margin-bottom: 72px;
 }
 
 /* ===== MOBILE section 2 ===== */
@@ -1192,6 +1191,10 @@ margin-right: 120px;
 
 .social-media-footer {
 margin-right: 80px;
+}
+
+.subscribe-user-email {
+width: 264px;
 }
 
 /* ===== DESKTOP MODAL WINDOW ====== */
